MB-26672: Handle purgeTombstones() when last item doesn't have a seqno yet

The seqno list in an ephemeral vbucket can temporarily have the last
item without a valid seqno number. If the tombstone purger task runs
purgeTombstones() at such a time then, it should complete purging
correctly.

Change-Id: Id801eac03a630bc624ebf9e100d794cbc116d97f
Reviewed-on: http://review.couchbase.org/85207
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>